[package]
name = "Rust_servers"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.7.2"
tokio = { version = "1", features = ["full"] }
askama = "0.12"
tower = "0.4"
hyper = "1"
hyper-util = { version = "0.1", features = ["tokio"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
#stripe-rust = "0.12.3"
#stripe-rust ="0.12.3"
